# etude-cic

./: citoyennete-canada.rss  feed.xml  index.html
generator/: README.md  episodes.yml  gen.py  pyproject.toml
generator/templates/: feed.xml.jinja
